--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -9,6 +9,13 @@ jobs:
         go: [ 1.17, 1.18, 1.19 ]
         os: [ X64, ARM64 ]
     runs-on: ${{ matrix.os }}
+    services:
+      redis:
+        image: redis:latest
+        ports:
+          - '6379:6379'
+        network:
+          - 'tcp'
     steps:
       - uses: actions/checkout@v3
 
@@ -17,13 +24,12 @@ jobs:
         with:
           go-version: ${{ matrix.go }}
 
-       # block scenario, comment temporarily
-#      - uses: actions/cache@v3
-#        with:
-#          path: ~/go/pkg/mod
-#          key: ${{ runner.os }}-go-${{ hashFiles('**/go.sum') }}
-#          restore-keys: |
-#            ${{ runner.os }}-go-
+      - uses: actions/cache@v3
+        with:
+          path: ~/go/pkg/mod
+          key: ${{ runner.os }}-go-${{ hashFiles('**/go.sum') }}
+          restore-keys: |
+            ${{ runner.os }}-go-
 
       - name: Unit Test
         run: go test -race -covermode=atomic -coverprofile=coverage.out ./...
